Apply errors to comments, style errors, make partial for comment errors, pluralize, time Ago in words, #jumpto, make sure current_user signed in sees proper logic

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,10 @@ a {
     font-family: cursive;
 	}
 
+#errors {
+	color: red;
+}
+
 #sidebar {
 	width: 250px;
 	position: fixed;
